--- a/Attendance Management System/Properties/Resources.resx
+++ b/Attendance Management System/Properties/Resources.resx
@@ -127,13 +127,22 @@
   <data name="Delete-Red-X-Button-Transparent" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Delete-Red-X-Button-Transparent.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Webalys-Kameleon.pics-Student-3.512" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Webalys-Kameleon.pics-Student-3.512.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="3403551-200" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\3403551-200.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Webalys-Kameleon.pics-Student-3.512" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Webalys-Kameleon.pics-Student-3.512.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="update" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\update.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="lang1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lang.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="delete (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\delete (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="DeleteIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DeleteIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
