--- a/Attendance Management System/Forms/FormLogin.ar.resx
+++ b/Attendance Management System/Forms/FormLogin.ar.resx
@@ -572,11 +572,11 @@
   <data name="UserEmail.Text" xml:space="preserve">
     <value>بريدك الإلكتروني: </value>
   </data>
+  <data name="textBoxEmail.PlaceholderText" xml:space="preserve">
+    <value>بريدك الإلكترني ...</value>
+  </data>
   <data name="textBoxEmail.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
     <value>Yes</value>
-  </data>
-  <data name="textBoxEmail.Text" xml:space="preserve">
-    <value>بريدك الإلكترني ...</value>
   </data>
   <data name="label1.AutoSize" type="System.Boolean, mscorlib">
     <value>False</value>
@@ -641,7 +641,7 @@
 </value>
   </data>
   <data name="pictureBoxShow.Location" type="System.Drawing.Point, System.Drawing">
-    <value>148, 393</value>
+    <value>36, 176</value>
   </data>
   <data name="pictureBoxHide.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -830,7 +830,7 @@
 </value>
   </data>
   <data name="pictureBoxHide.Location" type="System.Drawing.Point, System.Drawing">
-    <value>148, 393</value>
+    <value>36, 176</value>
   </data>
   <data name="pictureBoxError.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -937,10 +937,13 @@
   <data name="buttonLogin.Text" xml:space="preserve">
     <value>تسجيل الدخول</value>
   </data>
+  <data name="textBoxPassword.PlaceholderText" xml:space="preserve">
+    <value>رقمك السرى ...</value>
+  </data>
   <data name="textBoxPassword.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
     <value>Yes</value>
   </data>
-  <data name="pictureBoxSettings.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pictureBoxSettings.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         /9j/4AAQSkZJRgABAQEAAAAAAAD/4QAuRXhpZgAATU0AKgAAAAgAAkAAAAMAAAABAAAAAEABAAEAAAAB
         AAAAAAAAAAD/2wBDAAoHBwkHBgoJCAkLCwoMDxkQDw4ODx4WFxIZJCAmJSMgIyIoLTkwKCo2KyIjMkQy
@@ -1222,9 +1225,6 @@
   <data name="pictureBoxSettings.Location" type="System.Drawing.Point, System.Drawing">
     <value>157, 12</value>
   </data>
-  <data name="pictureBoxSettings.SizeMode" type="System.Windows.Forms.PictureBoxSizeMode, System.Windows.Forms">
-    <value>Zoom</value>
-  </data>
   <data name="labelOpenDateTime.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
   </data>
@@ -1293,6 +1293,12 @@
   </data>
   <data name="buttonLanguage.Text" xml:space="preserve">
     <value>Convert to English</value>
+  </data>
+  <data name="groupBox1.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
+    <value>Yes</value>
+  </data>
+  <data name="groupBox1.Text" xml:space="preserve">
+    <value>ادخل بياناتك الشخصية,رجاءاً</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
