--- a/Attendance Management System/Forms/StudentForm.en.resx
+++ b/Attendance Management System/Forms/StudentForm.en.resx
@@ -134,4 +134,20 @@
   <data name="panelCourses.Size" type="System.Drawing.Size, System.Drawing">
     <value>303, 992</value>
   </data>
+  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="labTimeDate.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="labTimeDate.Location" type="System.Drawing.Point, System.Drawing">
+    <value>391, 243</value>
+  </data>
+  <data name="labTimeDate.Size" type="System.Drawing.Size, System.Drawing">
+    <value>50, 20</value>
+  </data>
+  <data name="labTimeDate.TabIndex" type="System.Int32, mscorlib">
+    <value>13</value>
+  </data>
+  <data name="labTimeDate.Text" xml:space="preserve">
+    <value>label4</value>
+  </data>
 </root>
